# AdvancedDataStructureProj2

./: .gitignore  README.md  run.py
features/: BGReplace.cpp  BGReplace.h  BOW.cpp  BOW.h  CMakeCache.txt  CMakeLists.txt  ColorHistogram.cpp  ColorHistogram.h  ColorMean.cpp  ColorMean.h  ColorMoments.cpp  ColorMoments.h  ColorPerspective.cpp  ColorPerspective.h  CombinedFeature.cpp  CombinedFeature.h  FeatureExtractor.h  Makefile  RegionGrow.h  ShapeDescriptor.cpp  ShapeDescriptor.h  cmake_install.cmake  genfeatures.cpp  irlist.txt  main.cpp  readme.md
features/ImageRetrival_WHP/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  feature.cpp  feature.h  hsv.cpp  hsv.h  preprocessing.cpp  preprocessing.h  test.cpp
list/: .gitignore  compareList.py  createNameList.py  handleNewList.py  imagefeatures.txt  imagefeatures_test.txt  imagefeatures_train.txt  namelist.txt  randomFeatureList.py  randomlist.py  readme.md  testlist.txt  trainlist.txt
training/Compare/: compare.py
training/KNN/: colorfeatures.txt  k-neighbors.py  readme.md  test.txt
training/NeuralNetwork/: NN_predict.py  NN_training.py
training/RandomForest/: RF_predict.py  RF_training.py  showRes.py
training/SVM/: SVM-training.py  SVM_predict.py  SVM_training.py  readme.md
training/SVM-training/: SVM-training.py
training/Visualize/: colormoments.txt  imagefeatures_hist_9.txt  readme.md  visualize.py
